[tool.poetry]
name = "kea-exporter"
version = "0.4.2"
description = "Export Kea Metrics in the Prometheus Exposition Format"
authors = [
  "Martin Weinelt <hexa@darmstadt.ccc.de>"
]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mweinelt/kea-exporter"
repository = "https://github.com/mweinelt/kea-exporter.git"
keywords = [
  "prometheus",
  "exporter",
  "metrics",
  "kea",
  "dhcp"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration"
]

[tool.poetry.dependencies]
python = "^3.7"
click = ">=6.7"
prometheus-client = ">=0.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
kea-exporter = 'kea_exporter.__main__:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
