[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "kea-exporter"
version = "0.5.1"
description = "Export Kea Metrics in the Prometheus Exposition Format"
authors = [
    { name = "Martin Weinelt", email = "hexa@darmstadt.ccc.de" },
]
license = { text = "MIT" }
requires-python = ">=3.7,<4.0"
dependencies = [
    "click>=6.7",
    "prometheus-client>=0.1.1",
]
readme = "README.rst"
keywords = [
    "prometheus",
    "exporter",
    "metrics",
    "kea",
    "dhcp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

[project.urls]
changelog = "https://github.com/mweinelt/kea-exporter/blob/develop/HISTORY"
homepage = "https://github.com/mweinelt/kea-exporter"
repository = "https://github.com/mweinelt/kea-exporter.git"

[project.scripts]
kea-exporter = "kea_exporter.__main__:cli"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.10.1",
]

[tool.pdm.build]
includes = []
